# course-work-4-OOP

./: pyproject.toml  requirements.txt
src/: class_API.py  class_JSONSaver.py  class_Vacancy.py  main.py  search_by_vacancies.json  utils.py
src2/: class_API.py  class_JSONSaver.py  class_Vacancy.py  main.py  search_by_vacancies.json  utils.py
src3/: README.md  class_API.py  class_JSONSaver.py  class_Vacancy.py  main.py  search_by_vacancies.json  utils.py
